Atualizar o style.css

--- a/style.css
+++ b/style.css
@@ -29,8 +29,9 @@ header p {
 #map {
   width: 100vw;
   height: 100vh;
-  position: relative;
-  z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 #form {
